--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 /* General Setttings */
 
 body {
+  background-image: url('img-01.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 100vh;
   box-sizing: border-box;
   background-color: #ffc600;
   font-family: 'helvetica neue';
@@ -54,5 +59,13 @@ input {
 
 .suggestions li:nth-child(even) {
   transform: perspective(100px) rotateX(3deg) translateY(2px) scale(1.001);
-  background: linear-gradient(to bottom, #fff 0%, #fcfcd0 100% );
+  background: linear-gradient(to bottom, #fff 0%, #f1dcb5 100% );
+}
+
+span.population {
+  font-size: 15px;
+}
+
+.hl {
+  background: #ffc600;
 }
