--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   background-repeat: no-repeat;
   width: 100vw;
   height: 100vh;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   background-color: #ffc600;
   font-family: 'Source Sans Pro', sans-serif;
 }
@@ -45,7 +45,7 @@ input {
   border: 10px solid #f7f7f7;
   border-radius: 5px;
   text-align: center;
-  font-size: 2vmax;
+  font-size: 2.5vmax;
   box-shadow:  0 0 5px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.19);
 }
 
@@ -62,7 +62,7 @@ input {
   padding: 20px;
   list-style: none;
   text-transform: capitalize;
-  font-size: 1vmax;
+  font: 1.5vmax 'helvetica neue';
   background-color: #fff;
   border-bottom: 1px solid #d8d8d8;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.14);
